@@ -302,6 +302,9 @@ function reseller_addDomainAlias()
 
 				$uri->setHost(encode_idna($uri->getHost()));
 
+				$uriPath = rtrim(preg_replace('#/+#', '/', $uri->getPath()), '/') . '/'; // normalize path
+				$uri->setPath($uriPath);
+
 				if ($uri->getHost() == $domainAliasNameAscii && $uri->getPath() == '/') {
 					throw new iMSCP_Exception(
 						tr('Forward URL %s is not valid.', "<strong>$forwardUrl</strong>") . ' ' .
